--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -7,6 +7,10 @@
     <uses-sdk
         android:minSdkVersion="14"
         android:targetSdkVersion="19" />
+    
+    
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -21,7 +25,10 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-    </application>
+        </activity> 
+         <activity
+            android:name=".ImagePagerActivity"
+            android:label="@string/bookcover_pager" />
+    	</application>
 
 </manifest>
