hook up UI to "syncer": request book info from Douban API and store result in db

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -35,7 +35,7 @@
 
         <provider
             android:name="org.dreamcorps.content.LmsContentProvider"
-            android:authorities="org.dreamcorps.content.LmsContentProvider"
+            android:authorities="@string/dreamcorps_authority"
             android:exported="false" />
 
         <service android:name="ca.dragonflystudios.content.service.Service" />
